# cpp_project_template

./: CMakeLists.txt
src/: mylib.cpp
tests/: CMakeLists.txt  main.cpp
